<resources>
    <string name="app_name">Inventory</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="item_save_success">Item saved</string>
    <string name="item_save_fail">Inventory</string>
    <string name="empty_inventory_msg">Remove all items from your inventory?</string>
    <string name="remove_item_msg">Remove this item?</string>
    <string name="unsaved_changes_dialog_msg">Discard changes and quit?</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="stay">Stay</string>
    <string name="items_delete_success">Items removed</string>
    <string name="item_delete_success">Item removed</string>
    <string name="items_delete_fail">Error while deleting items</string>
    <string name="item_delete_fail">Error while deleting item</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_items">Delete All Items</string>
    <string name="save">Save</string>
    <string name="empty_view_text">It\'s a bit empty here</string>
    <string name="empty_view_subtext">Start off by adding new item</string>
    <string name="item_requires_name">Item requires a name</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="price_prompt">Input valid price in dollars</string>
    <string name="cant_order_zero">You cannot order 0 items</string>
    <string name="quantity_prompt">Input valid quantity</string>
    <string name="unknown_supplier">We can\'t order stuff from unknown supplier</string>

    <string name="label_description">Description</string>
    <string name="product_name">Product Name</string>
    <string name="_name_">name</string>
    <string name="quantity">Quantity</string>
    <string name="_quantity_">quantity</string>
    <string name="price">Price $</string>
    <string name="_dollars_">dollars</string>
    <string name="supplier">Supplier</string>
    <string name="_supplier_">supplier</string>
    <string name="sell">Sell</string>
    <string name="order">Order</string>
    <string name="image_starting_line">Image</string>
    <string name="order_more">Order More</string>

    <string name="add_photo">Add Photo</string>
    <string name="option_take_photo">Take Photo</string>
    <string name="option_choose_from_gallery">Choose from Gallery</string>
    <string name="click_to_add_photo">Click here to add photo</string>
    <string name="click_to_change_photo">Click here to change photo</string>
</resources>